# bygram

./: README.md  pyproject.toml
bygram/: __init__.py  client_manager.py  manager.py
bygram/core/: serializer.py  wrapper.py
bygram/routing/: __init__.py  dispatcher.py  middlewares.py
bygram/types/: base.py
compiler/: README.md  cli.py  formatting.py  logic.py  parser.py  preprocessor.py  utils.py
src/bygram/: exceptions.py  executor.py  manager.py  strategy.py
src/bygram-stubs/: client_manager.pyi  exceptions.pyi  executor.pyi
src/bygram-stubs/bygram/: __init__.pyi  manager.pyi
src/bygram-stubs/bygram/core/: listener.pyi  serializer.pyi
src/bygram-stubs/bygram/routing/: __init__.pyi  middlewares.pyi
src/bygram-stubs/core/: types.pyi
src/bygram-stubs/routing/: filters.pyi
src/bygram-stubs/types/: base.pyi  raw.pyi
src/bygram/core/: listener.py  serializer.py  types.py
src/bygram/routing/: dispatcher.py  filters.py
src/bygram/types/: raw.py
tests/unit/: test_dispatcher.py  test_event_listener.py  test_serializer.py
